--- a/UI/Content/css/Login.css
+++ b/UI/Content/css/Login.css
@@ -6,7 +6,7 @@
 .main {
     width: calc(100vw);
     height: calc(100vh);
-    background: url(/Content/images/Login/bk-login.png) no-repeat;
+    background: url(/img/Login/bk-login.png) no-repeat;
     background-size: 100% 100%;
     overflow: hidden;
 }
